--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd-mobile": "^5.40.0",
     "antd-mobile-icons": "^0.3.0",
     "axios": "^1.10.0",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.0"
